# claw

./: .gitmodules  README.md  Untitled v7.f3z  model.f3z  platformio.ini  pyproject.toml  test.py  z-holder.stl
arduino/: README.md
client/: main.py
data/: concepts.csv
data/with_vector/: concepts.csv
laser_cut_files/: colored_1.dxf  colored_2.dxf  transparent_1.dxf  transparent_3.dxf  transparent_4.dxf
scripts/vector_store/: main.py
server/: gpt.py  main.py  screen.py
server/contents/: prompt.md
server/utils/: embedding_utils.py  gpt.py
server/utils/printer/: label.py
src/: controller.cpp  main.cpp  shared.h  stepper.cpp
src/utils/: mqtt.h  websockets.h  wifiConnection.h
